# mlops-view

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build-images.yaml  ci.yaml  deploy-infra.yaml  deploy-model.yaml  flux-sync.yaml
ansible/: ansible.cfg
ansible/playbooks/: bootstrap-cluster.yaml  deploy-helm.yaml
apps/: kustomization.yaml
apps/airflow/: helmrepository-apache-airflow.yaml  hr-airflow.yaml  kustomization.yaml
apps/gateway/: hr-gateway.yaml  kustomization.yaml
apps/llm-serving/: hr-llm-serving.yaml  kustomization.yaml
apps/mlflow/: helmrepository-bitnami.yaml  hr-mlflow.yaml  kustomization.yaml
clusters/base/: external-secrets.yaml  flux-config.yaml  gpu-operator.yaml  kustomization.yaml  namespaces.yaml  observability.yaml
clusters/dev/: cluster-vars.yaml
clusters/prod/: cluster-vars.yaml  kustomization.yaml
clusters/staging/: apps.yaml  cluster-vars.yaml
docker/inference/: .dockerignore  Dockerfile
docker/pipeline-runner/: Dockerfile  requirements.txt
docker/training/: Dockerfile  requirements.txt
docs/: architecture.md
docs/runbooks/: gpu-scaling.md  high-latency.md  model-deployment.md
helm/grafana-dashboards/: Chart.yaml  values.yaml
helm/llm-serving/: Chart.yaml  values-dev.yaml  values-prod.yaml  values-staging.yaml  values.yaml
monitoring/: __init__.py  prometheus-local.yml
pipelines/: __init__.py
scripts/: bootstrap-cluster.sh  ci-helpers.sh  cost-report.py  validate.sh
terraform/: backend.tf  main.tf  outputs.tf  variables.tf  versions.tf
tests/: test_smoke.py
(+71 files in other folders)
