[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []

[project]
name = "mlops-view"
version = "0.0.0"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "PyYAML>=6.0",
  "requests>=2.31",
  "prometheus-client>=0.19",
]
test = [
  "pytest>=7.4",
  "requests>=2.31",
  "prometheus-client>=0.19",
  "PyYAML>=6.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [
  ".git",
  ".terraform",
  ".venv",
  "pipelines",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "monitoring/exporters"]
